--- a/js/tests/integration/index.html
+++ b/js/tests/integration/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../../../dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../dist/css/coreui.min.css">
 
     <title>Hello, world!</title>
   </head>
